@@ -578,6 +578,9 @@ To translate:
   'The URI "[_1]" is not unique. Please change the cover date, output channels, slug, or categories as necessary to make the URIs unique.' => 'The URI "[_1]" is not unique. Please change the cover date, output channels, slug, or categories as necessary to make the URIs unique.'
   'Name "[_1]" is not a valid media name. The name must be of the form "type/subtype".' => 'Name "[_1]" is not a valid media name. The name must be of the form "type/subtype".',
 
+  'Include deleted' => 'Include deleted',
+  'Reactivate' => 'Reactivate',
+
 =end comment
 
 =cut
